[package]
name = "aarambh-net"
version = "0.1.4"
edition = "2021"
description = "A library for HTTP, TCP, and UDP clients and servers"
license = "MIT"
keywords = ["http", "tcp", "udp", "rust"]
categories = ["network-programming", "asynchronous", "web-programming"]
readme = "README.md"
homepage = "https://github.com/AarambhDevHub/AarambhNet"
repository = "https://github.com/AarambhDevHub/AarambhNet"

[lib]
crate-type = ["lib"]


[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }


# Logging dependencies (optional)
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2.3", optional = true }

[features]
default = []
logger = ["tracing", "tracing-subscriber", "tracing-appender"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
